--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -78,13 +78,13 @@
 % Inserire tutti i capitoli necessari. Si possono inserire tutti i capitoli
 % all'interno di un singolo file .tex oppure un file .tex per ogni capitolo.
 
-\begin{linenumbers}
+%\begin{linenumbers}
 \input{main/introduction}
 
 \input{main/section01}
 
 \input{main/conclusions}
-\end{linenumbers}
+%\end{linenumbers}
 
 %*******************************************************
 % Bibliografia
