Defining the basic skeleton.

--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -79,13 +79,16 @@
 % all'interno di un singolo file .tex oppure un file .tex per ogni capitolo.
 
 %\begin{linenumbers}
-\input{main/introduction}
-
-\input{main/section01}
-
-\input{main/conclusions}
+\input{main/Introduction}
+\input{main/OverallDescription}
+\input{main/SpecificRequirements}
+\input{main/FormalAnalysisUsingAlloy}
+\input{main/EffortSpent}
+\input{main/References}
 %\end{linenumbers}
 
+
+% bibliogarphy should be moved under References!
 %*******************************************************
 % Bibliografia
 %*******************************************************
