--- a/RASD/main/frontpage.tex
+++ b/RASD/main/frontpage.tex
@@ -1,5 +1,5 @@
 % Titolo della tesi e autore
-\title{CLup – Customers Line-up \\ Requirement Analysis and Specification Document}
+\title{CLup – Customers Line-up \\ Requirements Analysis and Specification Document}
 \author{Damiano Derin}
 \begin{document}
 \pagenumbering{roman}
@@ -18,7 +18,7 @@
     
     
     {\LARGE {\bfseries CLup – Customers Line-up \\
-    	Requirement Analysis \\ and \\ Specification Document\\}}
+    	Requirements Analysis \\ and \\ Specification Document\\}}
     \vspace{1cm}
 
     {\large \today \\
