from notes to latex + customer use cases diagram

--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -99,7 +99,7 @@
 %*******************************************************
 % Glossario
 %*******************************************************
-%\glsaddall
+\glsaddall
 \printglossary[type=\acronymtype,title={Glossary}]
 
 \end{document}
