--- a/RASD/main/Introduction.tex
+++ b/RASD/main/Introduction.tex
@@ -2,6 +2,36 @@
 
 \section{Purpose}
 
+\subsection{Description of the Given Problem}
+
+\subsection{Goals}
+
+Bla bla bla...
+
+\textbf{Features for \textit{lining up}:}
+\begin{itemize}
+	\item {[G1]}: Customers should be able to line up from a remote digital device.
+	\item {[G2]}: Customers should be able to line up from a physical spot.
+	\item {[G3]}: Customers should be able to obtain a QR code encoding an identifier of the lining up.
+\end{itemize}
+
+\textbf{Features for \textit{booking a visit}:}
+\begin{itemize}
+	\item {[G4]}: Customers should be able to book a visit from a remote digital device.
+	\item {[G5]}: Customers should be able to book a visit from a physical spot.
+	\item {[G6]}: Customers should be able to obtain a QR code encoding an identifier of the booking.
+\end{itemize}
+
+\textbf{Features for the system:}
+\begin{itemize}
+
+	
+	\item {[G7]}: The system should allow customers to enter in the store only if they have been authorized.
+	\item {[G8]}: The system should monitor the customers' body temperature before allowing them to enter the store.
+	\item {[G9]}: The system should maximize the number of customers in the store w.r.t. the capacity of the store and the social distances imposed by the \gls{dpcm}.
+	
+\end{itemize}
+
 \section{Scope}
 
 \section{Definitions, Acronyms, Abbreviations}
