--- a/RASD/main/frontpage.tex
+++ b/RASD/main/frontpage.tex
@@ -30,12 +30,14 @@
     \vfill
     \begin{table}[h]
         {\large
-            \begin{tabular}{c c c c r c c | c c l}
-                & & & & & & & & & Author \\
-                & & & & & & & & & \bfseries Damiano Derin \\
-                & & & & & & & & & \\
-                & & & & & & & & & Author \\
-                & & & & & & & & & \bfseries Jas Valencic \\
+            \begin{tabular}{c c c c c c c c c c c c c c c c | c r}
+                & & & & & & & & & & & & & & & & & Student \\
+                & & & & & & & & & & & & & & & & & \bfseries Damiano Derin \\
+                & & & & & & & & & & & & & & & & & \\
+                & & & & & & & & & & & & & & & & & Student \\
+                & & & & & & & & & & & & & & & & & \bfseries Jas Valencic \\
+                & & & & & & & & & & & & & & & & & \\
+                \hline
             \end{tabular}
         }
     \end{table}
