--- a/RASD/main/OverallDescription.tex
+++ b/RASD/main/OverallDescription.tex
@@ -7,3 +7,21 @@
 \section{User Characteristics}
 
 \section{Assumptions, Dependencies and Constraints}
+
+In the scenario we are taking into consideration, we assume the following domain assumptions:
+
+\begin{itemize}
+
+	\item {[D1]}: Customers respect the \gls{dpcm} impositions.
+	\item {[D2]}: If customers have lined up from remote, they shall approach to the store with the smartphone.
+	\item {[D3]}: If customers indicate the category of products they would buy, they won't buy other things.
+	\item {[D4]}: Customers lining up remotely shall have a \gls{gps} module inside the smartphone.
+	\item {[D5]}: Customers lining up remotely shall accept \gls{gps} localization permissions.
+	\item {[D6]}: Customers lining up remotely shall keep Internet connection active.
+	\item {[D7]}: Customers lining up remotely shall keep notification option active.
+	\item {[D8]}: Customers enter in the store only if the system authorized them.
+	\item {[D9]}: Customers go away from the store after they have done their shopping.
+	\item {[D10]}: Customers lining up from the physical spot take care about the printed QR code.
+	\item {[D11]}: Customers show the QR code to the scanner to be accepted by the system.
+
+\end{itemize}
