--- a/RASD/main/glossary.tex
+++ b/RASD/main/glossary.tex
@@ -1,2 +1,4 @@
 % dai conops
-\newacronym{rasd}{RASD}{Requirement Analysis and Specification Document}
+\newacronym{clup}{CLup}{Customers Line-up}
+\newacronym{dpcm}{d.P.C.m}{\textit{"decreto del Presidente del Consiglio dei ministri"}}
+\newacronym{gps}{GPS}{Global Positioning System}
