more general goals and user interfaces example

--- a/RASD/main/Introduction.tex
+++ b/RASD/main/Introduction.tex
@@ -8,27 +8,24 @@
 
 Bla bla bla...
 
-\textbf{Features for \textit{lining up}:}
+Goals:
 \begin{itemize}
-	\item {[G1]}: Customers should be able to line up from a remote digital device.
-	\item {[G2]}: Customers should be able to line up from a physical spot.
-	\item {[G3]}: Customers should be able to obtain a QR code encoding an identifier of the lining up.
-\end{itemize}
+	\item {\textbf{[G1]}}: Customers should be able to line up from a remote device.
+	\item {\textbf{[G2]}}: Customers should be able to line up from a physical spot.
+	%\item {[G3]}: Customers should be able to obtain a QR code encoding an identifier of the lining up.
 
-\textbf{Features for \textit{booking a visit}:}
-\begin{itemize}
-	\item {[G4]}: Customers should be able to book a visit from a remote digital device.
-	\item {[G5]}: Customers should be able to book a visit from a physical spot.
-	\item {[G6]}: Customers should be able to obtain a QR code encoding an identifier of the booking.
-\end{itemize}
-
-\textbf{Features for the system:}
-\begin{itemize}
-
+	\item {\textbf{[G3]}}: Customers should be able to book a visit from a remote device.
+	%\item {[G5]}: Customers should be able to book a visit from a physical spot.
+	%\item {[G6]}: Customers should be able to obtain a QR code encoding an identifier of the booking.
 	
-	\item {[G7]}: The system should allow customers to enter in the store only if they have been authorized.
-	\item {[G8]}: The system should monitor the customers' body temperature before allowing them to enter the store.
-	\item {[G9]}: The system should maximize the number of customers in the store w.r.t. the capacity of the store and the social distances imposed by the \gls{dpcm}.
+	\item {\textbf{[G4]}}: Customers should be monitored when they enter the store.
+
+	%\item {[G7]}: The system should allow customers to enter in the store only if they have been authorized.
+	%\item {[G8]}: The system should monitor the customers' body temperature before allowing them to enter the store.
+	
+	\item {\textbf{[G5]}}: Customers should be kept in safe conditions, w.r.t the \gls{dpcm}.
+	
+	%\item {[G9]}: The system should maximize the number of customers in the store w.r.t. the capacity of the store and the social distances imposed by the \gls{dpcm}.
 	
 \end{itemize}
 
