--- a/RASD/main/Introduction.tex
+++ b/RASD/main/Introduction.tex
@@ -10,22 +10,24 @@ Bla bla bla...
 
 Goals:
 \begin{itemize}
-	\item {\textbf{[G1]}}: Customers should be able to line up from a remote device.
-	\item {\textbf{[G2]}}: Customers should be able to line up from a physical spot.
-	%\item {[G3]}: Customers should be able to obtain a QR code encoding an identifier of the lining up.
 
-	\item {\textbf{[G3]}}: Customers should be able to book a visit from a remote device.
-	%\item {[G5]}: Customers should be able to book a visit from a physical spot.
-	%\item {[G6]}: Customers should be able to obtain a QR code encoding an identifier of the booking.
+	\item {\textbf{[G1]}}: Keep customers in safe condition w.r.t the \gls{dpcm} in force inside the store.
 	
-	\item {\textbf{[G4]}}: Customers should be monitored when they enter the store.
+	% \item {\textbf{[G1]}}: Keep customers in safe condition w.r.t the \gls{dpcm} in force in the square outside the store.
+		
+	\item {\textbf{[G2]}}: Allow customers to line up from a remote device.
+		
+	\item {\textbf{[G3]}}: Allow store manager to monitor entrances.
+	
+	\item {\textbf{[G4]}}: Provide estimation of the waiting time.
+	
+	\item {\textbf{[G5]}}: Notify customers that their turn is coming.
+	
+	\item {\textbf{[G6]}}: Allow customers to line up from a physical spot.
 
-	%\item {[G7]}: The system should allow customers to enter in the store only if they have been authorized.
-	%\item {[G8]}: The system should monitor the customers' body temperature before allowing them to enter the store.
-	
-	\item {\textbf{[G5]}}: Customers should be kept in safe conditions, w.r.t the \gls{dpcm}.
-	
-	%\item {[G9]}: The system should maximize the number of customers in the store w.r.t. the capacity of the store and the social distances imposed by the \gls{dpcm}.
+	\item {\textbf{[G7]}}: Allow customers to book a visit from a remote device.
+
+	\item {\textbf{[G8]}}: Infer customers visits duration.
 	
 \end{itemize}
 
